-Multiple UI and features changes

--- a/app/src/main/res/layout/activity_card_details.xml
+++ b/app/src/main/res/layout/activity_card_details.xml
@@ -32,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
+            app:cardBackgroundColor="#FFFFFF"
             android:elevation="@dimen/card_view_elevation"
             app:cardCornerRadius="@dimen/card_view_corner_radius">
 
@@ -53,6 +54,7 @@
                         android:hint="@string/hint_card_name"
                         android:inputType="text"
                         android:textSize="@dimen/et_text_size"
+                        android:textColor="@color/primary_text_color"
                         tools:text="Test" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:elevation="@dimen/card_view_elevation"
+            app:cardBackgroundColor="#FFFFFF"
             app:cardCornerRadius="@dimen/card_view_corner_radius">
 
             <LinearLayout
@@ -104,6 +107,14 @@
                     android:padding="@dimen/card_details_value_padding"
                     android:text="@string/select_members"
                     android:textColor="@color/primary_text_color" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_selected_members_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/card_details_value_marginTop"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <TextView
                     android:layout_width="match_parent"
