--- a/app/src/main/res/layout/activity_members.xml
+++ b/app/src/main/res/layout/activity_members.xml
@@ -34,6 +34,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/members_cv_marginTop"
             android:background="@android:color/white"
+            app:cardBackgroundColor="#FFFFFF"
             android:elevation="@dimen/card_view_elevation"
             app:cardCornerRadius="@dimen/card_view_corner_radius">
 
