--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/item_card_content_margin"
     android:background="?attr/selectableItemBackground"
+    app:cardBackgroundColor="#FFFFFF"
     android:elevation="@dimen/item_card_cv_elevation"
     android:orientation="vertical">
 
@@ -26,7 +28,16 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/item_card_name_text_padding"
             android:textSize="@dimen/item_card_name_text_size"
+            android:textColor="@color/secondary_text_color"
             tools:text="Card Name" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_card_selected_members_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/card_details_value_marginTop"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_members_name"
