--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="colorPrimaryDark">#9400D3</color>
     <color name="primary_text_color">#363A43</color>
     <color name="secondary_text_color">#7A8089</color>
-    <color name="snacbar_error_color">#F72400</color>
+    <color name="snackbar_error_color">#F72400</color>
     <color name = "divider_color">#EAEAEA</color>
 
     <color name="task_list_action_color">#F7F6FA</color>
